--- a/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/public/index.html
+++ b/MindOverMapper_Movim/MindOverMapper_Movim/ClientApp/public/index.html
@@ -20,7 +20,7 @@
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
-        <title>Idea Creator</title>
+        <title>IP Creator</title>
     </head>
     <body>
         <noscript>
